--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,14 +1,9 @@
 {
   "name": "Aurora Symbolic Dev",
-  "dockerComposeFile": "../docker-compose_aurora_gui_cloudhub_UPDATED.yaml",
+  "dockerComposeFile": "docker-compose_aurora_gui_cloudhub_UPDATED.yaml",
   "service": "aurora_gui",
-  "workspaceFolder": "/workspace",
-  "postCreateCommand": "bash ./git_push_aurora_seed.sh || true",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-vscode-remote.remote-containers"
-      ]
-    }
-  }
+  "workspaceFolder": "/workspace/aurora-cloudbank-symbolic",
+  "postCreateCommand": "bash start_aurora_gui_cloudhub.sh",
+  "features": {},
+  "forwardPorts": [8080]
 }
